bugfix: use denominator 1 instead of 0